# MiniTrade

./: .gitignore  CMakeLists.txt  config.json  main.cpp
CommonUtils/: CMakeLists.txt  commonUtils.h  generateSignature  generateSignature.cpp  generateSignature.h  getTimeStamp  getTimeStamp.cpp  jsonSpecificUtils
config/: Sync.cpp  Sync.h  config.cpp  config.h  jsonSpecificUtils  jsonSpecificUtils.cpp
data/: allorders001.json  cancelFutureResponse.json  exchangeInfo.json  orderFutureResponse001.json
infrastructure/: testNet  testNet.cpp  webSocket  webSocket.cpp
pksk/: pksk
